# qwen-agent-example

./: .gitignore  Dockerfile  INSTALLATION.md  README.md  build_frontend.py  docker-compose.host-ollama.yml  docker-compose.yml.backup  docker_test_summary.md  env.example  main.py  pyproject.toml  run_tests.py  run_with_frontend.py  simple_chat.html  sse_chat.html  streaming_chat.html  test_docker.py  test_docker_simple.py  test_frontend_integration.py  test_gradio.py  test_multimodal.py  test_webui.py  websocket_chat.html
.cursor/: navigation.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
docs/: EXTENSIBILITY_GUIDE.md  NAVIGATION_GUIDE.md  documentation_index.json
frontend/: README.md  package-lock.json  package.json  webpack.config.js
frontend/src/: index.html  index.js
scripts/: deploy.sh  dev.sh
src/: __init__.py  agent_manager.py  api.py  api_security.py  auth.py  cli.py  config.py  config_manager.py  doc_cli.py  doc_navigation.py  extensibility.py  middleware.py  models.py  multimodal.py  security.py  task_types.py  webui.py
tests/: README.md  run_all_tests.py  view_results.py
tests/results/: test_results_20250728_172227.json  test_results_20250728_174741.json  test_results_20250728_175349.json
tests/scripts/: test_api.py  test_api_security.py  test_auth_security.py  test_documentation_navigation.py  test_extensibility.py  test_multimodal.py  (+2 more)
(+16 files in other folders)
